--- a/easy_ui/public/scss/easy.bundle.scss
+++ b/easy_ui/public/scss/easy.bundle.scss
@@ -1,7 +1,2 @@
-// @import "./easy.scss";
-// @import "./sidebar.scss";
-
-@import "./scss/template/index.scss";
-@import "./scss/base/vertical-nav";
-@import "./scss/base/default-layout-w-horizontal-nav";
-
+@import "./easy.scss";
+@import "./sidebar.scss";
