--- a/easy_ui/public/scss/easy.bundle.scss
+++ b/easy_ui/public/scss/easy.bundle.scss
@@ -1,12 +1,12 @@
 // @import "./easy.scss";
-// @import "./sidebar.scss";
+@import "./sidebar.scss";
+
 
 
 
 ///scss
-
-@import "./assets/vendor/css/rtl/core-dark.scss";
-// @import "./assets/vendor/css/rtl/core.scss";
+@import "./assets/vendor/css/rtl/core.scss";
+// @import "./assets/vendor/css/rtl/core-dark.scss";
 @import "./assets/vendor/css/rtl/theme-bordered-dark.scss";
 @import "./assets/vendor/css/rtl/theme-bordered.scss";
 @import "./assets/vendor/css/rtl/theme-default-dark.scss";
