--- a/easy_ui/www/includes/script.html
+++ b/easy_ui/www/includes/script.html
@@ -3,7 +3,7 @@
   <!-- build:js assets/vendor/js/core.js -->
   
   <script src="{{ app_path }}assets/vendor/libs/popper/popper.js"></script>
-  <script src="{{ app_path }}assets/vendor/js/bootstrap.js"></script>
+  <!-- <script src="{{ app_path }}assets/vendor/js/bootstrap.js"></script> -->
   <script src="{{ app_path }}assets/vendor/libs/node-waves/node-waves.js"></script>
   <script src="{{ app_path }}assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
   <script src="{{ app_path }}assets/vendor/libs/hammer/hammer.js"></script>
